# Eidolon-CLI

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md
.devin/: wiki.json
docs/: architecture.md  configuration.md  container.md  development.md  plugins.md  setup-guide.md  usage.md
rust/: .gitignore
rust/crates/api-server/: Cargo.toml
rust/crates/api-server/src/: lib.rs  types.rs
rust/crates/api/src/: client.rs  error.rs  lib.rs  provider_pool.rs
rust/crates/api/src/providers/: anthropic.rs  mod.rs  openai_compat.rs
rust/crates/api/tests/: client_integration.rs
rust/crates/commands/src/: lib.rs
rust/crates/eidolon-cli/: Cargo.toml
rust/crates/eidolon-cli/.eidolon/plugins/: installed.json
rust/crates/eidolon-cli/src/: init.rs  main.rs  render.rs  skin.rs
rust/crates/eidolon-cli/tests/: cli_flags_and_config_defaults.rs  mock_parity_harness.rs  output_format_contract.rs  resume_slash_commands.rs
rust/crates/indexing/: Cargo.toml
rust/crates/indexing/src/: cache.rs  chunker.rs  discovery.rs  embedder.rs  index.rs  lib.rs  model.rs  search.rs  types.rs
rust/crates/plugins/src/: lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/src/: approval_cache.rs  bash.rs  config.rs  conversation.rs  file_ops.rs  hooks.rs  indexer.rs  lib.rs  mcp_server.rs  mcp_stdio.rs  mcp_tool_bridge.rs  oauth.rs  permissions.rs  process_registry.rs  profile.rs  prompt.rs  sandbox.rs  session.rs  session_control.rs  session_index.rs  syndicate_collection.rs  syndicate_memory.rs  syndicate_orchestrator.rs  task_packet.rs  task_registry.rs
rust/crates/tools/: .gitignore  Cargo.toml
rust/crates/tools/src/: lib.rs
