[package]
name = "api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
api = { path = "../api" }
runtime = { path = "../runtime" }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tower = "0.5"

[lints]
workspace = true
