[package]
name = "indexing"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
bincode = "1"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = { version = "0.4", features = ["tokio"] }
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
tokenizers = "0.21"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
